2009-02-02 Sarka Todorova <sarka.todorova@cern.ch>
	* adjustable blending
	* tagged as MuonTrackingGeometry-00-04-15

2009-01-15 Sarka Todorova <sarka.todorova@cern.ch>
	* performance update (via fine partitioning )
	* tagged as MuonTrackingGeometry-00-04-14

2008-12-18 Andreas Salzburger < Andrfeas.Salzburger -at- cern.ch >
        * changes for double/float testbuilding
        * tagged as MuonTrackingGeometry-00-04-13

2008-12-16 Andreas Salzburger < Andrfeas.Salzburger -at- cern.ch >
        * adapt dependencies, remove dependency on TrkDetDescrTools
        * tagged as MuonTrackingGeometry-00-04-12 

2008-12-01 Sarka Todorova <sarka.todorova@cern.ch>
	* suppress spacer layers with negative thickness
	* tagged as MuonTrackingGeometry-00-04-11

2008-12-01 Sarka Todorova <sarka.todorova@cern.ch>
	* default setup ( merge of ATG & MTG ) 
	* tagged as MuonTrackingGeometry-00-04-10

2008-11-28 Sarka Todorova <sarka.todorova@cern.ch>
	* prevent crash in finalization ( of multiple build of geometry ) 
	* tagged as MuonTrackingGeometry-00-04-09

2008-11-27 Sarka Todorova <sarka.todorova@cern.ch>
	* prevent memory leak in multiple build of geometry  
	* tagged as MuonTrackingGeometry-00-04-08

2008-11-26 Sarka Todorova <sarka.todorova@cern.ch>
	* memory leaks  
	* tagged as MuonTrackingGeometry-00-04-06(7)

2008-11-24 Sarka Todorova <sarka.todorova@cern.ch>
	* fix phi span calculation
	* protect material blending ( vanishing diluting factor )
	* tagged as MuonTrackingGeometry-00-04-05

2008-11-17 Sarka Todorova <sarka.todorova@cern.ch>
	* AGDD BAR volumes turned to simplified as default (AGDD bug/feature leads to excess of material)
	* AGDD naming (partly) implemented (BAR/ECT/Feet/Rail)
	* tagged as MuonTrackingGeometry-00-04-04

2008-11-04 Sarka Todorova <sarka.todorova@cern.ch>
	* full chain working with AGDD( 3D frame not optimized with AGDD material yet )
	* merge with 00-03-22-01 branch to fix RPC cutouts
	* tagged as MuonTrackingGeometry-00-04-03
